--- a/Madagascar Image Processing.ipynb
+++ b/Madagascar Image Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "PATH1 = '/mnt/c/Users/Devynn/Dropbox (Point Road Solutions)/PRS_Engineering/Madagascar2018/10-20/Bullfrog_camera/G0192070.JPG'\n",
-    "PATH2 = '/mnt/c/Users/Devynn/Dropbox (Point Road Solutions)/PRS_Engineering/Madagascar2018/10-20/Bullfrog_camera/GOPR2025.MP4'\n",
+    "PATH2 = '/mnt/c/Users/Devynn/Dropbox (Point Road Solutions)/PRS_Engineering/Madagascar2018/10-20/Bullfrog_camera/Stripped Audio/GOPR2025_quiet.MP4'\n",
     "\n",
     "img = cv2.imread(PATH1)\n",
     "vid = cv2.VideoCapture(PATH2)"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "Text(0.5,1,'Video Stream Capture')"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -59,7 +59,7 @@
     "\n",
     "#Capture correct video frame\n",
     "vid = cv2.VideoCapture(PATH2)\n",
-    "frameflag = 5399 + 47\n",
+    "frameflag = 5399\n",
     "count = 0\n",
     "\n",
     "while(True):\n",
@@ -107,8 +107,8 @@
     }
    ],
    "source": [
-    "#This method can be used with other images and videos in the dropbox folders, but have different numbers of frame offsets\n",
-    "#Still not sure why\n",
+    "# Something about GoPro audio codec causes all videos to briefly return False for 20-80 frames, starting at the 16th frame\n",
+    "# Stripping audio from the .mp4 file using ffmpeg fixes the problem. Why was this ever a problem tho\n",
     "\n",
     "PATH3 = '/mnt/c/Users/Devynn/Dropbox (Point Road Solutions)/PRS_Engineering/Madagascar2018/10-20/Bullfrog_camera/G0171996.JPG'\n",
     "img2 = cv2.imread(PATH3)\n",
@@ -292,8 +292,8 @@
     }
    ],
    "source": [
-    "#This method can be used with other images and videos in the dropbox folders, but have different numbers of frame offsets\n",
-    "#Still not sure why\n",
+    "#This method can be used with other images and videos in the dropbox folders\n",
+    "#FRAME OFFSET IS DUE TO GOPRO AUDIO CODEC ISSUES: can be resolved by stripping audio stream using ffmpeg\n",
     "\n",
     "PATH3 = '/mnt/c/Users/Devynn/Dropbox (Point Road Solutions)/PRS_Engineering/Madagascar2018/10-20/Bullfrog_camera/G0171996.JPG'\n",
     "img2 = cv2.imread(PATH3)\n",
@@ -470,6 +470,279 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "PATH3 = '/mnt/c/Users/Devynn/Dropbox (Point Road Solutions)/PRS_Engineering/Madagascar2018/10-20/Bullfrog_camera/G0192070.JPG'\n",
+    "img2 = cv2.imread(PATH3)\n",
+    "\n",
+    "PATH4 = '/mnt/c/Users/Devynn/Dropbox (Point Road Solutions)/PRS_Engineering/Madagascar2018/10-20/Bullfrog_camera/GOPR2025.MP4'\n",
+    "vid2 = cv2.VideoCapture(PATH4)\n",
+    "\n",
+    "for i in range(100):\n",
+    "    rval, frame = cv2.VideoCapture.read(vid2)\n",
+    "    print(type(frame))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "PATH4 = \"/home/devynn/noaudio.MP4\"\n",
+    "vid2 = cv2.VideoCapture(PATH4)\n",
+    "for i in range(120):\n",
+    "    rval, frame = cv2.VideoCapture.read(vid2)\n",
+    "    print(rval)\n",
+    "    if frame is None:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -569,18 +842,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   }
  },
  "nbformat": 4,
